--- a/index.html
+++ b/index.html
@@ -449,6 +449,7 @@
     <link rel="stylesheet" href="css/calendar.success-motivation.css">
     <link rel="stylesheet" href="css/calendar.success-story.css">
     <link rel="stylesheet" href="css/calendar.summer-breeze.css">
+    <link rel="stylesheet" href="css/calendar.summer-vibes.css">
     <link rel="stylesheet" href="css/calendar.sunset-magic.css">
     <link rel="stylesheet" href="css/calendar.sweet-misty-morning.css">
     <link rel="stylesheet" href="css/calendar.sword-of-fate.css">
@@ -1181,6 +1182,7 @@
                 <option value="success-motivation">Success Motivation</option>
                 <option value="success-story">Success Story</option>
                 <option value="summer-breeze">Summer Breeze</option>
+                <option value="summer-vibes">Summer Vibes</option>
                 <option value="sunset-magic">Sunset Magic</option>
                 <option value="sweet-misty-morning">Sweet Misty Morning</option>
                 <option value="sword-of-fate">Sword of Fate</option>
