--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
     <link rel="stylesheet" href="css/calendar.on-the-island.css">
     <link rel="stylesheet" href="css/calendar.on-the-wild-side.css">
     <link rel="stylesheet" href="css/calendar.orange-country.css">
+    <link rel="stylesheet" href="css/calendar.orange-dragon.css">
     <link rel="stylesheet" href="css/calendar.orion-constellation.css">
     <link rel="stylesheet" href="css/calendar.out-of-the-blue.css">
     <link rel="stylesheet" href="css/calendar.out-of-the-box.css">
@@ -1091,6 +1092,7 @@
                 <option value="on-the-island">On the Island</option>
                 <option value="on-the-wild-side">On the Wild Side</option>
                 <option value="orange-country">Orange Country</option>
+                <option value="orange-dragon">Orange Dragon</option>
                 <option value="orion-constellation">Orion Constellation</option>
                 <option value="out-of-the-blue">Out of the Blue</option>
                 <option value="out-of-the-box">Out of the Box</option>
