--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <link rel="stylesheet" href="css/calendar.blue-planet.css">
     <link rel="stylesheet" href="css/calendar.blue-sky.css">
     <link rel="stylesheet" href="css/calendar.blue-stars.css">
+    <link rel="stylesheet" href="css/calendar.blue-system.css">
     <link rel="stylesheet" href="css/calendar.blue-whale.css">
     <link rel="stylesheet" href="css/calendar.blue-white.css">
     <link rel="stylesheet" href="css/calendar.blue-window.css">
@@ -830,6 +831,7 @@
                 <option value="blue-planet">Blue Planet</option>
                 <option value="blue-sky">Blue Sky</option>
                 <option value="blue-stars">Blue Stars</option>
+                <option value="blue-system">Blue System</option>
                 <option value="blue-whale">Blue Whale</option>
                 <option value="blue-white">Blue & White</option>
                 <option value="blue-window">Blue Window</option>
