--- a/index.html
+++ b/index.html
@@ -465,6 +465,7 @@
     <link rel="stylesheet" href="css/calendar.the-black-spruce.css">
     <link rel="stylesheet" href="css/calendar.the-burning-heart-of-the-sahara.css">
     <link rel="stylesheet" href="css/calendar.the-dead-sea.css">
+    <link rel="stylesheet" href="css/calendar.the-deepest-point.css">
     <link rel="stylesheet" href="css/calendar.the-desert-line.css">
     <link rel="stylesheet" href="css/calendar.the-element-of-surprise.css">
     <link rel="stylesheet" href="css/calendar.the-final-step.css">
@@ -1201,6 +1202,7 @@
                 <option value="the-black-spruce">The Black Spruce</option>
                 <option value="the-burning-heart-of-the-sahara">The Burning Heart of the Sahara</option>
                 <option value="the-dead-sea">The Dead Sea</option>
+                <option value="the-deepest-point">The Deepest Point</option>
                 <option value="the-desert-line">The Desert Line</option>
                 <option value="the-element-of-surprise">The Element of Surprise</option>
                 <option value="the-final-step">The Final Step</option>
