--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
     <link rel="stylesheet" href="css/calendar.island-of-rainbows.css">
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
     <link rel="stylesheet" href="css/calendar.jungle-nature.css">
+    <link rel="stylesheet" href="css/calendar.just-around-the-bend.css">
     <link rel="stylesheet" href="css/calendar.keep-it-simple.css">
     <link rel="stylesheet" href="css/calendar.keep-on-smiling.css">
     <link rel="stylesheet" href="css/calendar.keep-shining.css">
@@ -1011,6 +1012,7 @@
                 <option value="island-of-rainbows">Island of Rainbows</option>
                 <option value="japan-emperor">Japan's Emperor</option>
                 <option value="jungle-nature">Jungle Nature</option>
+                <option value="just-around-the-bend">Just around the Bend</option>
                 <option value="keep-it-simple">Keep it Simple</option>
                 <option value="keep-on-smiling">Keep on Smiling</option>
                 <option value="keep-shining">Keep Shining</option>
