Bigboss Style ver 1.0

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <link rel="stylesheet" href="css/calendar.best-practice.css">
     <link rel="stylesheet" href="css/calendar.best-response.css">
     <link rel="stylesheet" href="css/calendar.be-yourself.css">
+    <link rel="stylesheet" href="css/calendar.bigboss-style.css">
     <link rel="stylesheet" href="css/calendar.big-dream.css">
     <link rel="stylesheet" href="css/calendar.big-fashion.css">
     <link rel="stylesheet" href="css/calendar.big-pacific.css">
@@ -806,6 +807,7 @@
                 <option value="best-practice">Best Practice</option>
                 <option value="best-response">Best Response</option>
                 <option value="be-yourself">Be Yourself</option>
+                <option value="bigboss-style">Bigboss Style</option>
                 <option value="big-dream">Big Dream</option>
                 <option value="big-fashion">Big Fashion</option>
                 <option value="big-pacific">Big Pacific</option>
