--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@
     <link rel="stylesheet" href="css/calendar.tactical-advantage.css">
     <link rel="stylesheet" href="css/calendar.tactical-command.css">
     <link rel="stylesheet" href="css/calendar.the-art-of-visible.css">
+    <link rel="stylesheet" href="css/calendar.the-best-mood.css">
     <link rel="stylesheet" href="css/calendar.the-best-of-fashion.css">
     <link rel="stylesheet" href="css/calendar.the-black-spruce.css">
     <link rel="stylesheet" href="css/calendar.the-burning-heart-of-the-sahara.css">
@@ -1204,6 +1205,7 @@
                 <option value="tactical-advantage">Tactical Advantage</option>
                 <option value="tactical-command">Tactical Command</option>
                 <option value="the-art-of-visible">The Art of Visible</option>
+                <option value="the-best-mood">The Best Mood</option>
                 <option value="the-best-of-fashion">The Best of Fashion</option>
                 <option value="the-black-spruce">The Black Spruce</option>
                 <option value="the-burning-heart-of-the-sahara">The Burning Heart of the Sahara</option>
