--- a/index.html
+++ b/index.html
@@ -457,6 +457,7 @@
     <link rel="stylesheet" href="css/calendar.summer-breeze.css">
     <link rel="stylesheet" href="css/calendar.summer-vibes.css">
     <link rel="stylesheet" href="css/calendar.sunset-magic.css">
+    <link rel="stylesheet" href="css/calendar.surfing-club.css">
     <link rel="stylesheet" href="css/calendar.sweet-misty-morning.css">
     <link rel="stylesheet" href="css/calendar.sword-of-fate.css">
     <link rel="stylesheet" href="css/calendar.technological-future.css">
@@ -1198,6 +1199,7 @@
                 <option value="summer-breeze">Summer Breeze</option>
                 <option value="summer-vibes">Summer Vibes</option>
                 <option value="sunset-magic">Sunset Magic</option>
+                <option value="surfing-club">Surfing Club</option>
                 <option value="sweet-misty-morning">Sweet Misty Morning</option>
                 <option value="sword-of-fate">Sword of Fate</option>
                 <option value="technological-future">Technological Future</option>
