--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@
     <link rel="stylesheet" href="css/calendar.technological-might.css">
     <link rel="stylesheet" href="css/calendar.tactical-advantage.css">
     <link rel="stylesheet" href="css/calendar.tactical-command.css">
+    <link rel="stylesheet" href="css/calendar.take-me-to-summer.css">
     <link rel="stylesheet" href="css/calendar.the-art-of-visible.css">
     <link rel="stylesheet" href="css/calendar.the-best-mood.css">
     <link rel="stylesheet" href="css/calendar.the-best-of-fashion.css">
@@ -1206,6 +1207,7 @@
                 <option value="technological-might">Technological Might</option>
                 <option value="tactical-advantage">Tactical Advantage</option>
                 <option value="tactical-command">Tactical Command</option>
+                <option value="take-me-to-summer">Take Me to Summer</option>
                 <option value="the-art-of-visible">The Art of Visible</option>
                 <option value="the-best-mood">The Best Mood</option>
                 <option value="the-best-of-fashion">The Best of Fashion</option>
