--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
     <link rel="stylesheet" href="css/calendar.cyber-pulse.css">
     <link rel="stylesheet" href="css/calendar.dark-code.css">
     <link rel="stylesheet" href="css/calendar.dark-mode.css">
+    <link rel="stylesheet" href="css/calendar.darkness-blue.css">
     <link rel="stylesheet" href="css/calendar.dark-star.css">
     <link rel="stylesheet" href="css/calendar.dartagnans-rapier.css">
     <link rel="stylesheet" href="css/calendar.daruma-doll.css">
@@ -330,6 +331,7 @@
     <link rel="stylesheet" href="css/calendar.mount-fuji.css">
     <link rel="stylesheet" href="css/calendar.mount-cook.css">
     <link rel="stylesheet" href="css/calendar.my-dream-country.css">
+    <link rel="stylesheet" href="css/calendar.my-dream-home.css">
     <link rel="stylesheet" href="css/calendar.my-tomorrow.css">
     <link rel="stylesheet" href="css/calendar.natural-wonders.css">
     <link rel="stylesheet" href="css/calendar.neon-nights.css">
@@ -891,6 +893,7 @@
                 <option value="cyber-pulse">Cyber Pulse</option>
                 <option value="dark-code">Dark Code</option>
                 <option value="dark-mode">Dark Mode</option>
+                <option value="darkness-blue">Darkness Blue</option>
                 <option value="dark-star">Dark Star</option>
                 <option value="dartagnans-rapier">D'Artagnan's Rapier</option>
                 <option value="daruma-doll">Daruma Doll</option>
@@ -1075,6 +1078,7 @@
                 <option value="mount-fuji">Mount Fuji</option>
                 <option value="mount-cook">Mount Cook</option>
                 <option value="my-dream-country">My Dream Country</option>
+                <option value="my-dream-home">My Dream Home</option>
                 <option value="my-tomorrow">My Tomorrow</option>
                 <option value="natural-wonders">Natural Wonders</option>
                 <option value="neon-nights">Neon Nights</option>
