--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <link rel="stylesheet" href="css/calendar.arctic-snowfall.css">
     <link rel="stylesheet" href="css/calendar.art-studio.css">
     <link rel="stylesheet" href="css/calendar.a-simple-task.css">
+    <link rel="stylesheet" href="css/calendar.a-solitude-moment.css">
     <link rel="stylesheet" href="css/calendar.a-thing-of-beauty.css">
     <link rel="stylesheet" href="css/calendar.a-turning-point.css">
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
@@ -801,6 +802,7 @@
                 <option value="arctic-snowfall">Arctic Snowfall</option>
                 <option value="art-studio">Art Studio</option>
                 <option value="a-simple-task">A Simple Task</option>
+                <option value="a-solitude-moment">A Solitude Moment</option>
                 <option value="a-thing-of-beauty">A Thing of Beauty</option>
                 <option value="a-turning-point">A Turning Point</option>
                 <option value="autumn-harvest">Autumn Harvest</option>
