--- a/index.html
+++ b/index.html
@@ -508,6 +508,7 @@
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
     <link rel="stylesheet" href="css/calendar.turquoise-frontier.css">
     <link rel="stylesheet" href="css/calendar.twilight-garden.css">
+    <link rel="stylesheet" href="css/calendar.underwater-life.css">
     <link rel="stylesheet" href="css/calendar.unforgettable-moments.css">
     <link rel="stylesheet" href="css/calendar.unseen-wonders.css">
     <link rel="stylesheet" href="css/calendar.untouched-paradise.css">
@@ -1257,6 +1258,7 @@
                 <option value="tropical-sunset">Tropical Sunset</option>
                 <option value="turquoise-frontier">Turquoise Frontier</option>
                 <option value="twilight-garden">Twilight Garden</option>
+                <option value="underwater-life">Underwater Life</option>
                 <option value="unforgettable-moments">Unforgettable Moments</option>
                 <option value="unseen-wonders">Unseen Wonders</option>
                 <option value="untouched-paradise">Untouched Paradise</option>
