--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
     <link rel="stylesheet" href="css/calendar.flamingo-sky.css">
     <link rel="stylesheet" href="css/calendar.forgotten-dreams.css">
     <link rel="stylesheet" href="css/calendar.formula-one.css">
+    <link rel="stylesheet" href="css/calendar.for-the-last-time.css">
     <link rel="stylesheet" href="css/calendar.forward-thinking.css">
     <link rel="stylesheet" href="css/calendar.free-flight.css">
     <link rel="stylesheet" href="css/calendar.fresh-start.css">
@@ -958,6 +959,7 @@
                 <option value="flamingo-sky">Flamingo Sky</option>
                 <option value="forgotten-dreams">Forgotten Dreams</option>
                 <option value="formula-one">Formula One</option>
+                <option value="for-the-last-time">For the Last Time</option>
                 <option value="forward-thinking">Foward Thinking</option>
                 <option value="free-flight">Free Flight</option>
                 <option value="fresh-start">Fresh Start</option>
