--- a/index.html
+++ b/index.html
@@ -406,6 +406,7 @@
     <link rel="stylesheet" href="css/calendar.real-results.css">
     <link rel="stylesheet" href="css/calendar.red-lake.css">
     <link rel="stylesheet" href="css/calendar.red-squirrel.css">
+    <link rel="stylesheet" href="css/calendar.remarkable-city.css">
     <link rel="stylesheet" href="css/calendar.remote-island.css">
     <link rel="stylesheet" href="css/calendar.right-on-track.css">
     <link rel="stylesheet" href="css/calendar.rising-sun.css">
@@ -1157,6 +1158,7 @@
                 <option value="real-results">Real Results</option>
                 <option value="red-lake">Red Lake</option>
                 <option value="red-squirrel">Red Squirrel</option>
+                <option value="remarkable-city">Remarkable City</option>
                 <option value="remote-island">Remote Island</option>
                 <option value="right-on-track">Right on Track</option>
                 <option value="rising-sun">Rising Sun</option>
