--- a/index.html
+++ b/index.html
@@ -430,6 +430,7 @@
     <link rel="stylesheet" href="css/calendar.significant-improvement.css">
     <link rel="stylesheet" href="css/calendar.silicon-valley.css">
     <link rel="stylesheet" href="css/calendar.silver-dragon.css">
+    <link rel="stylesheet" href="css/calendar.sky-diving.css">
     <link rel="stylesheet" href="css/calendar.sky-eagle.css">
     <link rel="stylesheet" href="css/calendar.sky-hawk.css">
     <link rel="stylesheet" href="css/calendar.skylight-window.css">
@@ -1181,6 +1182,7 @@
                 <option value="significant-improvement">Significant Improvement</option>
                 <option value="silicon-valley">Silicon Valley</option>
                 <option value="silver-dragon">Silver Dragon</option>
+                <option value="sky-diving">Sky Diving</option>
                 <option value="sky-eagle">Sky Eagle</option>
                 <option value="sky-hawk">Sky Hawk</option>
                 <option value="skylight-window">Skylight Window</option>
