--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
     <link rel="stylesheet" href="css/calendar.expedient-path.css">
     <link rel="stylesheet" href="css/calendar.exponential-acceleration.css">
     <link rel="stylesheet" href="css/calendar.extraordinary-achievement.css">
+    <link rel="stylesheet" href="css/calendar.fairytale-town.css">
     <link rel="stylesheet" href="css/calendar.fast-track.css">
     <link rel="stylesheet" href="css/calendar.fiji-islands.css">
     <link rel="stylesheet" href="css/calendar.finish-line.css">
@@ -954,6 +955,7 @@
                 <option value="expedient-path">Expedient Path</option>
                 <option value="exponential-acceleration">Exponential Acceleration</option>
                 <option value="extraordinary-achievement">Extraordinary Achievement</option>
+                <option value="fairytale-town">Fairytale Town</option>
                 <option value="fast-track">Fast Track</option>
                 <option value="fiji-islands">Fiji Islands</option>
                 <option value="finish-line">Finish Line</option>
