--- a/index.html
+++ b/index.html
@@ -485,6 +485,7 @@
     <link rel="stylesheet" href="css/calendar.the-element-of-surprise.css">
     <link rel="stylesheet" href="css/calendar.the-final-step.css">
     <link rel="stylesheet" href="css/calendar.the-finest-green-tea.css">
+    <link rel="stylesheet" href="css/calendar.the-first-prize.css">
     <link rel="stylesheet" href="css/calendar.the-great-silk-road.css">
     <link rel="stylesheet" href="css/calendar.the-great-wall.css">
     <link rel="stylesheet" href="css/calendar.the-green-mist.css">
@@ -1239,6 +1240,7 @@
                 <option value="the-element-of-surprise">The Element of Surprise</option>
                 <option value="the-final-step">The Final Step</option>
                 <option value="the-finest-green-tea">The Finest Green Tea</option>
+                 <option value="the-first-prize">The First Prize</option>
                 <option value="the-great-silk-road">The Great Silk Road</option>
                 <option value="the-great-wall">The Great Wall</option>
                 <option value="the-green-mist">The Green Mist</option>
