--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
     <link rel="stylesheet" href="css/calendar.creative-content.css">
     <link rel="stylesheet" href="css/calendar.crimson-sky.css">
+    <link rel="stylesheet" href="css/calendar.crisp-mountain-air.css">
     <link rel="stylesheet" href="css/calendar.critical-thinking.css">
     <link rel="stylesheet" href="css/calendar.crossroads-stone.css">
     <link rel="stylesheet" href="css/calendar.crystal-snowfall.css">
@@ -899,6 +900,7 @@
                 <option value="cracked-ice">Cracked Ice</option>
                 <option value="creative-content">Creative Content</option>
                 <option value="crimson-sky">Crimson Sky</option>
+                <option value="crisp-mountain-air">Crisp Mountain Air</option>
                 <option value="critical-thinking">Critical Thinking</option>
                 <option value="crossroads-stone">Crossroads Stone</option>
                 <option value="crystal-snowfall">Crystal Snowfall</option>
