--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
     <link rel="stylesheet" href="css/calendar.desert-between-us.css">
     <link rel="stylesheet" href="css/calendar.desert-miracle.css">
     <link rel="stylesheet" href="css/calendar.desert-mirage.css">
+    <link rel="stylesheet" href="css/calendar.desert-rose.css">
     <link rel="stylesheet" href="css/calendar.desert-water.css">
     <link rel="stylesheet" href="css/calendar.developers-zone.css">
     <link rel="stylesheet" href="css/calendar.diamond-planet.css">
@@ -918,6 +919,7 @@
                 <option value="desert-between-us">Desert Between Us</option>
                 <option value="desert-miracle">Desert Miracle</option>
                 <option value="desert-mirage">Desert Mirage</option>
+                <option value="desert-rose">Desert Rose</option>
                 <option value="desert-water">Desert Water</option>
                 <option value="developers-zone">Developers Zone</option>
                 <option value="diamond-planet">Diamond Planet</option>
