--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
     <link rel="stylesheet" href="css/calendar.mirror-lake.css">
     <link rel="stylesheet" href="css/calendar.modern-technology.css">
     <link rel="stylesheet" href="css/calendar.monochrome-ink.css">
+    <link rel="stylesheet" href="css/calendar.moon-bridge.css">
     <link rel="stylesheet" href="css/calendar.moonlit-path.css">
     <link rel="stylesheet" href="css/calendar.morning-forest.css">
     <link rel="stylesheet" href="css/calendar.mountain-lake.css">
@@ -1085,6 +1086,7 @@
                 <option value="mirror-lake">Mirror Lake</option>
                 <option value="modern-technology">Modern Technology</option>
                 <option value="monochrome-ink">Monochrome Ink</option>
+                <option value="moon-bridge">Moon Bridge</option>
                 <option value="moonlit-path">Moonlit Path</option>
                 <option value="morning-forest">Morning Forest</option>
                 <option value="mountain-lake">Mountain Lake</option>
