--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@
     <link rel="stylesheet" href="css/calendar.night-dragon.css">
     <link rel="stylesheet" href="css/calendar.night-mode-design.css">
     <link rel="stylesheet" href="css/calendar.night-sky.css">
+    <link rel="stylesheet" href="css/calendar.northern-lights.css">
     <link rel="stylesheet" href="css/calendar.northern-nights.css">
     <link rel="stylesheet" href="css/calendar.north-pole.css">
     <link rel="stylesheet" href="css/calendar.north-pole-icebreaker.css">
@@ -1111,6 +1112,7 @@
                 <option value="night-dragon">Night Dragon</option>
                 <option value="night-mode-design">Night Mode Design</option>
                 <option value="night-sky">Night Sky</option>
+                <option value="northern-lights">Northern Lights</option>
                 <option value="northern-nights">Northern Nights</option>
                 <option value="north-pole">North Pole</option>
                 <option value="north-pole-icebreaker">North Pole Icebreaker</option>
