--- a/index.html
+++ b/index.html
@@ -388,6 +388,7 @@
     <link rel="stylesheet" href="css/calendar.pink-lady.css">
     <link rel="stylesheet" href="css/calendar.pink-lake.css">
     <link rel="stylesheet" href="css/calendar.pirate-ship.css">
+    <link rel="stylesheet" href="css/calendar.planet-of-robots.css">
     <link rel="stylesheet" href="css/calendar.polar-bear.css">
     <link rel="stylesheet" href="css/calendar.porcupine-quill.css">
     <link rel="stylesheet" href="css/calendar.port-victoria.css">
@@ -1148,6 +1149,7 @@
                 <option value="pink-lady">Pink Lady</option>
                 <option value="pink-lake">Pink Lake</option>
                 <option value="pirate-ship">Pirate Ship</option>
+                <option value="planet-of-robots">Planet of Robots</option>
                 <option value="polar-bear">Polar Bear</option>
                 <option value="porcupine-quill">Porcupine Quill</option>
                 <option value="port-victoria">Port Victoria</option>
