--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
     <link rel="stylesheet" href="css/calendar.grand-prix.css">
     <link rel="stylesheet" href="css/calendar.great-idea.css">
     <link rel="stylesheet" href="css/calendar.great-lakes.css">
+    <link rel="stylesheet" href="css/calendar.greece-is-bliss.css">
     <link rel="stylesheet" href="css/calendar.green-city.css">
     <link rel="stylesheet" href="css/calendar.green-coffee.css">
     <link rel="stylesheet" href="css/calendar.green-heaven.css">
@@ -1002,6 +1003,7 @@
                 <option value="grand-prix">Grand Prix</option>
                 <option value="great-idea">Great Idea</option>
                 <option value="great-lakes">Great Lakes</option>
+                <option value="greece-is-bliss">Greece is Bliss</option>
                 <option value="green-city">Green City</option>
                 <option value="green-coffee">Green Coffee</option>
                 <option value="green-heaven">Green Heaven</option>
