--- a/index.html
+++ b/index.html
@@ -471,6 +471,7 @@
     <link rel="stylesheet" href="css/calendar.success-story.css">
     <link rel="stylesheet" href="css/calendar.summer-breeze.css">
     <link rel="stylesheet" href="css/calendar.summer-vibes.css">
+    <link rel="stylesheet" href="css/calendar.sunny-beach.css">
     <link rel="stylesheet" href="css/calendar.sunset-magic.css">
     <link rel="stylesheet" href="css/calendar.surfing-club.css">
     <link rel="stylesheet" href="css/calendar.sweet-misty-morning.css">
@@ -1233,6 +1234,7 @@
                 <option value="success-story">Success Story</option>
                 <option value="summer-breeze">Summer Breeze</option>
                 <option value="summer-vibes">Summer Vibes</option>
+                <option value="sunny-beach">Sunny Beach</option>
                 <option value="sunset-magic">Sunset Magic</option>
                 <option value="surfing-club">Surfing Club</option>
                 <option value="sweet-misty-morning">Sweet Misty Morning</option>
