--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
     <link rel="stylesheet" href="css/calendar.pink-lake.css">
     <link rel="stylesheet" href="css/calendar.pirate-ship.css">
     <link rel="stylesheet" href="css/calendar.planet-of-robots.css">
+    <link rel="stylesheet" href="css/calendar.point-nemo.css">
     <link rel="stylesheet" href="css/calendar.polar-bear.css">
     <link rel="stylesheet" href="css/calendar.porcupine-quill.css">
     <link rel="stylesheet" href="css/calendar.port-victoria.css">
@@ -1154,6 +1155,7 @@
                 <option value="pink-lake">Pink Lake</option>
                 <option value="pirate-ship">Pirate Ship</option>
                 <option value="planet-of-robots">Planet of Robots</option>
+                <option value="point-nemo">Point Nemo</option>
                 <option value="polar-bear">Polar Bear</option>
                 <option value="porcupine-quill">Porcupine Quill</option>
                 <option value="port-victoria">Port Victoria</option>
