--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
     <link rel="stylesheet" href="css/calendar.in-my-style.css">
     <link rel="stylesheet" href="css/calendar.inspiration-line.css">
     <link rel="stylesheet" href="css/calendar.in-the-dusk.css">
+    <link rel="stylesheet" href="css/calendar.in-the-mountains.css">
     <link rel="stylesheet" href="css/calendar.in-the-raspberry-dawn.css">
     <link rel="stylesheet" href="css/calendar.intelligence-quotient.css">
     <link rel="stylesheet" href="css/calendar.into-the-jungle.css">
@@ -1039,6 +1040,7 @@
                 <option value="in-my-style">In My Style</option>
                 <option value="inspiration-line">Inspiration Line</option>
                 <option value="in-the-dusk">In the Dusk</option>
+                <option value="in-the-mountains">In the Mountains</option>
                 <option value="in-the-raspberry-dawn">In the Raspberry Dawn</option>
                 <option value="intelligence-quotient">Intelligence Quotient</option>
                 <option value="into-the-jungle">Into the Jungle</option>
