--- a/index.html
+++ b/index.html
@@ -520,6 +520,7 @@
     <link rel="stylesheet" href="css/calendar.tropical-islands.css">
     <link rel="stylesheet" href="css/calendar.tropical-jungle.css">
     <link rel="stylesheet" href="css/calendar.tropical-nature.css">
+    <link rel="stylesheet" href="css/calendar.tropical-paradise.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
     <link rel="stylesheet" href="css/calendar.turquoise-frontier.css">
     <link rel="stylesheet" href="css/calendar.twilight-garden.css">
@@ -1286,6 +1287,7 @@
                 <option value="tropical-islands">Tropical Islands</option>
                 <option value="tropical-jungle">Tropical Jungle</option>
                 <option value="tropical-nature">Tropical Nature</option>
+                <option value="tropical-paradise">Tropical Paradise</option>
                 <option value="tropical-sunset">Tropical Sunset</option>
                 <option value="turquoise-frontier">Turquoise Frontier</option>
                 <option value="twilight-garden">Twilight Garden</option>
