--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
     <link rel="stylesheet" href="css/calendar.high-speed-train.css">
     <link rel="stylesheet" href="css/calendar.high-style.css">
     <link rel="stylesheet" href="css/calendar.hometown-vibes.css">
+    <link rel="stylesheet" href="css/calendar.honolulu-weekend.css">
     <link rel="stylesheet" href="css/calendar.hot-desert-summer.css">
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
     <link rel="stylesheet" href="css/calendar.hyperloop.css">
@@ -1029,6 +1030,7 @@
                 <option value="high-speed-train">High-Speed Train</option>
                 <option value="high-style">High Style</option>
                 <option value="hometown-vibes">Hometown Vibes</option>
+                <option value="honolulu-weekend">Honolulu Weekend</option>
                 <option value="hot-desert-summer">Hot Desert Summer</option>
                 <option value="hurricane-clouds">Hurricane Clouds</option>
                 <option value="hyperloop">Hyperloop</option>
