--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     <link rel="stylesheet" href="css/calendar.cherry-garden.css">
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
     <link rel="stylesheet" href="css/calendar.citrus-blaze.css">
+    <link rel="stylesheet" href="css/calendar.city-of-angels.css">
     <link rel="stylesheet" href="css/calendar.city-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.city-of-night.css">
     <link rel="stylesheet" href="css/calendar.clean-code.css">
@@ -891,6 +892,7 @@
                 <option value="cherry-garden">Cherry Garden</option>
                 <option value="cinnamon-street">Cinnamon Street</option>
                 <option value="citrus-blaze">Citrus Blaze</option>
+                <option value="city-of-angels">City of Angels</option>
                 <option value="city-of-dreams">City of Dreams</option>
                 <option value="city-of-night">City of Night</option>
                 <option value="clean-code">Clean Code</option>
