--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
     <link rel="stylesheet" href="css/calendar.color-symphony.css">
     <link rel="stylesheet" href="css/calendar.competitive-advantage.css">
     <link rel="stylesheet" href="css/calendar.continuous-growth.css">
+    <link rel="stylesheet" href="css/calendar.coral-garden.css">
     <link rel="stylesheet" href="css/calendar.coral-reef.css">
     <link rel="stylesheet" href="css/calendar.cosmic-nebula.css">
     <link rel="stylesheet" href="css/calendar.cosmic-perspective.css">
@@ -908,6 +909,7 @@
                 <option value="color-symphony">Color Symphony</option>
                 <option value="competitive-advantage">Competitive Advantage</option>
                 <option value="continuous-growth">Continuous Growth</option>
+                <option value="coral-garden">Coral Garden</option>
                 <option value="coral-reef">Coral Reef</option>
                 <option value="cosmic-nebula">Cosmic Nebula</option>
                 <option value="cosmic-perspective">Cosmic Perspective</option>
