--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@
     <link rel="stylesheet" href="css/calendar.progressive-decision.css">
     <link rel="stylesheet" href="css/calendar.pure-light.css">
     <link rel="stylesheet" href="css/calendar.purple-fog.css">
+    <link rel="stylesheet" href="css/calendar.purple-sunset.css">
     <link rel="stylesheet" href="css/calendar.quantum-programmer.css">
     <link rel="stylesheet" href="css/calendar.queen-of-ambience.css">
     <link rel="stylesheet" href="css/calendar.quiet-evening.css">
@@ -1178,6 +1179,7 @@
                 <option value="progressive-decision">Progressive Decision</option>
                 <option value="pure-light">Pure Light</option>
                 <option value="purple-fog">Purple Fog</option>
+                <option value="purple-sunset">Purple Sunset</option>
                 <option value="quantum-programmer">Quantum Programmer</option>
                 <option value="queen-of-ambience">Queen of Ambience</option>
                 <option value="quiet-evening">Quiet Evening</option>
