--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="css/calendar.alpha-centauri.css">
     <link rel="stylesheet" href="css/calendar.alpine-landscape.css">
     <link rel="stylesheet" href="css/calendar.amazing-opportunity.css">
+    <link rel="stylesheet" href="css/calendar.amazing-sunrise.css">
     <link rel="stylesheet" href="css/calendar.amazon-dolphin.css">
     <link rel="stylesheet" href="css/calendar.amazon-rainforest.css">
     <link rel="stylesheet" href="css/calendar.amazon-river.css">
@@ -813,6 +814,7 @@
                 <option value="alpha-centauri">Alpha Centauri</option>
                 <option value="alpine-landscape">Alpine Landscape</option>
                 <option value="amazing-opportunity">Amazing Opportunity</option>
+                <option value="amazing-sunrise">Amazing Sunrise</option>
                 <option value="amazon-dolphin">Amazon Dolphin</option>
                 <option value="amazon-rainforest">Amazon Rainforest</option>
                 <option value="amazon-river">Amazon River</option>
