--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
     <link rel="stylesheet" href="css/calendar.monochrome-ink.css">
     <link rel="stylesheet" href="css/calendar.moon-bridge.css">
     <link rel="stylesheet" href="css/calendar.moonlit-path.css">
+    <link rel="stylesheet" href="css/calendar.morning-coffee.css">
     <link rel="stylesheet" href="css/calendar.morning-forest.css">
     <link rel="stylesheet" href="css/calendar.mountain-lake.css">
     <link rel="stylesheet" href="css/calendar.mountain-landscape.css">
@@ -1109,6 +1110,7 @@
                 <option value="monochrome-ink">Monochrome Ink</option>
                 <option value="moon-bridge">Moon Bridge</option>
                 <option value="moonlit-path">Moonlit Path</option>
+                <option value="morning-coffee">Morning Coffee</option>
                 <option value="morning-forest">Morning Forest</option>
                 <option value="mountain-lake">Mountain Lake</option>
                 <option value="mountain-landscape">Mountain Landscape</option>
