--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
     <link rel="stylesheet" href="css/calendar.doterra-gold.css">
     <link rel="stylesheet" href="css/calendar.doterra-green.css">
     <link rel="stylesheet" href="css/calendar.doterra-magic.css">
+    <link rel="stylesheet" href="css/calendar.doterra-natural.css">
     <link rel="stylesheet" href="css/calendar.doterra-new.css">
     <link rel="stylesheet" href="css/calendar.doterra-power.css">
     <link rel="stylesheet" href="css/calendar.dragonfire.css">
@@ -955,6 +956,7 @@
                 <option value="doterra-gold">DōTERRA Gold</option>
                 <option value="doterra-green">DōTERRA Green</option>
                 <option value="doterra-magic">DōTERRA Magic</option>
+                <option value="doterra-natural">DōTERRA Natural</option>
                 <option value="doterra-new">DōTERRA New</option>
                 <option value="doterra-power">DōTERRA Power</option>
                 <option value="dragonfire">Dragonfire</option>
