--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@
     <link rel="stylesheet" href="css/calendar.ocean-parkway.css">
     <link rel="stylesheet" href="css/calendar.ocean-surf.css">
     <link rel="stylesheet" href="css/calendar.ocean-view.css">
+    <link rel="stylesheet" href="css/calendar.ocean-view-drive.css">
     <link rel="stylesheet" href="css/calendar.ocean-vortex.css">
     <link rel="stylesheet" href="css/calendar.okinawa-breeze.css">
     <link rel="stylesheet" href="css/calendar.old-lighthouse.css">
@@ -558,6 +559,7 @@
     <link rel="stylesheet" href="css/calendar.world-champion.css">
     <link rel="stylesheet" href="css/calendar.work-of-art.css">
     <link rel="stylesheet" href="css/calendar.yellow-eyed-penguin.css">
+    <link rel="stylesheet" href="css/calendar.your-dreamland.css">
     <link rel="stylesheet" href="css/calendar.your-wildest-dreams.css">
     <link rel="stylesheet" href="css/calendar.your-wildest-guess.css">
     <link rel="stylesheet" href="css/calendar.zodiac-constellations.css">
@@ -1147,6 +1149,7 @@
                 <option value="ocean-parkway">Ocean Parkway</option>
                 <option value="ocean-surf">Ocean Surf</option>
                 <option value="ocean-view">Ocean View</option>
+                <option value="ocean-view-drive">Ocean View Drive</option>
                 <option value="ocean-vortex">Ocean Vortex</option>
                 <option value="okinawa-breeze">Okinawa Breeze</option>
                 <option value="old-lighthouse">Old Lighthouse</option>
@@ -1335,6 +1338,7 @@
                 <option value="world-champion">World Champion</option>
                 <option value="work-of-art">Work of Art</option>
                 <option value="yellow-eyed-penguin">Yellow-eyed Penguin</option>
+                <option value="your-dreamland">Your Dreamland</option>
                 <option value="your-wildest-dreams">Your Wildest Dreams</option>
                 <option value="your-wildest-guess">Your Wildest Guess</option>
                 <option value="zodiac-constellations">Zodiac Constellations</option>
