--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
     <link rel="stylesheet" href="css/calendar.hidden-trail.css">
     <link rel="stylesheet" href="css/calendar.high-energy.css">
     <link rel="stylesheet" href="css/calendar.high-intelligence.css">
+    <link rel="stylesheet" href="css/calendar.highline-trail.css">
     <link rel="stylesheet" href="css/calendar.high-performance.css">
     <link rel="stylesheet" href="css/calendar.high-speed-rail.css">
     <link rel="stylesheet" href="css/calendar.high-speed-train.css">
@@ -1040,6 +1041,7 @@
                 <option value="hidden-trail">Hidden Trail</option>
                 <option value="high-energy">High Energy</option>
                 <option value="high-intelligence">High Intelligence</option>
+                <option value="highline-trail">Highline Trail</option>
                 <option value="high-performance">High Performance</option>
                 <option value="high-speed-rail">High-Speed Rail</option>
                 <option value="high-speed-train">High-Speed Train</option>
