--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     <link rel="stylesheet" href="css/calendar.blue-white.css">
     <link rel="stylesheet" href="css/calendar.blue-window.css">
     <link rel="stylesheet" href="css/calendar.bold-vision.css">
+    <link rel="stylesheet" href="css/calendar.bora-bora.css">
     <link rel="stylesheet" href="css/calendar.box-of-surprises.css">
     <link rel="stylesheet" href="css/calendar.breaking-point.css">
     <link rel="stylesheet" href="css/calendar.breathtaking-view.css">
@@ -884,6 +885,7 @@
                 <option value="blue-white">Blue & White</option>
                 <option value="blue-window">Blue Window</option>
                 <option value="bold-vision">Bold Vision</option>
+                <option value="bora-bora">Bora Bora</option>
                 <option value="box-of-surprises">Box of Surprises</option>
                 <option value="breaking-point">Breaking Point</option>
                 <option value="breathtaking-view">Breathtaking View</option>
