--- a/index.html
+++ b/index.html
@@ -541,6 +541,7 @@
     <link rel="stylesheet" href="css/calendar.unforgettable-moments.css">
     <link rel="stylesheet" href="css/calendar.unseen-wonders.css">
     <link rel="stylesheet" href="css/calendar.untouched-paradise.css">
+    <link rel="stylesheet" href="css/calendar.upcoming-dream.css">
     <link rel="stylesheet" href="css/calendar.urban-fashion.css">
     <link rel="stylesheet" href="css/calendar.velvety-dark.css">
     <link rel="stylesheet" href="css/calendar.vibrant-colors.css">
@@ -1322,6 +1323,7 @@
                 <option value="unforgettable-moments">Unforgettable Moments</option>
                 <option value="unseen-wonders">Unseen Wonders</option>
                 <option value="untouched-paradise">Untouched Paradise</option>
+                <option value="upcoming-dream">Upcoming Dream</option>
                 <option value="urban-fashion">Urban Fashion</option>
                 <option value="velvety-dark">Velvety Dark</option>
                 <option value="vibrant-colors">Vibrant Colors</option>
