--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
     <link rel="stylesheet" href="css/calendar.tactical-advantage.css">
     <link rel="stylesheet" href="css/calendar.tactical-command.css">
     <link rel="stylesheet" href="css/calendar.take-me-to-summer.css">
+    <link rel="stylesheet" href="css/calendar.tech-innovator.css">
     <link rel="stylesheet" href="css/calendar.technological-future.css">
     <link rel="stylesheet" href="css/calendar.technological-might.css">
     <link rel="stylesheet" href="css/calendar.the-art-of-visible.css">
@@ -1274,6 +1275,7 @@
                 <option value="tactical-advantage">Tactical Advantage</option>
                 <option value="tactical-command">Tactical Command</option>
                 <option value="take-me-to-summer">Take Me to Summer</option>
+                <option value="tech-innovator">Tech Innovator</option>
                 <option value="technological-future">Technological Future</option>
                 <option value="technological-might">Technological Might</option>
                 <option value="the-art-of-visible">The Art of Visible</option>
