--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <link rel="stylesheet" href="css/calendar.a-new-opportunity.css">
     <link rel="stylesheet" href="css/calendar.antarctic-ice.css">
     <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
+    <link rel="stylesheet" href="css/calendar.aqua-marina.css">
     <link rel="stylesheet" href="css/calendar.a-quiet-creek.css">
     <link rel="stylesheet" href="css/calendar.arctic-glow.css">
     <link rel="stylesheet" href="css/calendar.arctic-snowfall.css">
@@ -833,6 +834,7 @@
                 <option value="a-new-opportunity">A New Opportunity</option>
                 <option value="antarctic-ice">Antarctic Ice</option>
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
+                <option value="aqua-marina">Aqua Marina</option>
                 <option value="a-quiet-creek">A Quiet Creek</option>
                 <option value="arctic-glow">Arctic Glow</option>
                 <option value="arctic-snowfall">Arctic Snowfall</option>
