--- a/index.html
+++ b/index.html
@@ -489,6 +489,7 @@
     <link rel="stylesheet" href="css/calendar.summer-vibes.css">
     <link rel="stylesheet" href="css/calendar.sunny-beach.css">
     <link rel="stylesheet" href="css/calendar.sunset-magic.css">
+    <link rel="stylesheet" href="css/calendar.supreme-level.css">
     <link rel="stylesheet" href="css/calendar.surfing-club.css">
     <link rel="stylesheet" href="css/calendar.sweet-misty-morning.css">
     <link rel="stylesheet" href="css/calendar.sword-of-fate.css">
@@ -1273,6 +1274,7 @@
                 <option value="summer-vibes">Summer Vibes</option>
                 <option value="sunny-beach">Sunny Beach</option>
                 <option value="sunset-magic">Sunset Magic</option>
+                <option value="supreme-level">Supreme Level</option>
                 <option value="surfing-club">Surfing Club</option>
                 <option value="sweet-misty-morning">Sweet Misty Morning</option>
                 <option value="sword-of-fate">Sword of Fate</option>
