--- a/index.html
+++ b/index.html
@@ -479,6 +479,7 @@
     <link rel="stylesheet" href="css/calendar.strategic-planning.css">
     <link rel="stylesheet" href="css/calendar.strawberry-moon.css">
     <link rel="stylesheet" href="css/calendar.street-art-installation.css">
+    <link rel="stylesheet" href="css/calendar.street-fashion-style.css">
     <link rel="stylesheet" href="css/calendar.strength-of-spirit.css">
     <link rel="stylesheet" href="css/calendar.strong-foundation.css">
     <link rel="stylesheet" href="css/calendar.style-spectrum.css">
@@ -1265,6 +1266,7 @@
                 <option value="strategic-planning">Strategic Planning</option>
                 <option value="strawberry-moon">Strawberry Moon</option>
                 <option value="street-art-installation">Street Art Installation</option>
+                <option value="street-fashion-style">Street Fashion Style</option>
                 <option value="strength-of-spirit">Strength of Spirit</option>
                 <option value="strong-foundation">Strong Foundation</option>
                 <option value="style-spectrum">Style Spectrum</option>
