--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
     <link rel="stylesheet" href="css/calendar.expedient-path.css">
     <link rel="stylesheet" href="css/calendar.exponential-acceleration.css">
     <link rel="stylesheet" href="css/calendar.extraordinary-achievement.css">
+    <link rel="stylesheet" href="css/calendar.fairytale-charm.css">
     <link rel="stylesheet" href="css/calendar.fairytale-town.css">
     <link rel="stylesheet" href="css/calendar.fast-track.css">
     <link rel="stylesheet" href="css/calendar.fiji-islands.css">
@@ -543,6 +544,7 @@
     <link rel="stylesheet" href="css/calendar.turquoise-frontier.css">
     <link rel="stylesheet" href="css/calendar.twilight-garden.css">
     <link rel="stylesheet" href="css/calendar.underwater-life.css">
+    <link rel="stylesheet" href="css/calendar.unexpected-layout.css">
     <link rel="stylesheet" href="css/calendar.unforgettable-moments.css">
     <link rel="stylesheet" href="css/calendar.unseen-wonders.css">
     <link rel="stylesheet" href="css/calendar.untouched-paradise.css">
@@ -998,6 +1000,7 @@
                 <option value="expedient-path">Expedient Path</option>
                 <option value="exponential-acceleration">Exponential Acceleration</option>
                 <option value="extraordinary-achievement">Extraordinary Achievement</option>
+                <option value="fairytale-charm">Fairytale Charm</option>
                 <option value="fairytale-town">Fairytale Town</option>
                 <option value="fast-track">Fast Track</option>
                 <option value="fiji-islands">Fiji Islands</option>
@@ -1331,6 +1334,7 @@
                 <option value="turquoise-frontier">Turquoise Frontier</option>
                 <option value="twilight-garden">Twilight Garden</option>
                 <option value="underwater-life">Underwater Life</option>
+                <option value="unexpected-layout">Unexpected Layout</option>
                 <option value="unforgettable-moments">Unforgettable Moments</option>
                 <option value="unseen-wonders">Unseen Wonders</option>
                 <option value="untouched-paradise">Untouched Paradise</option>
