--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
     <link rel="stylesheet" href="css/calendar.desert-mirage.css">
     <link rel="stylesheet" href="css/calendar.desert-rose.css">
     <link rel="stylesheet" href="css/calendar.desert-water.css">
+    <link rel="stylesheet" href="css/calendar.destiny-to-succeed.css">
     <link rel="stylesheet" href="css/calendar.developers-zone.css">
     <link rel="stylesheet" href="css/calendar.diamond-planet.css">
     <link rel="stylesheet" href="css/calendar.different-perspective.css">
@@ -958,6 +959,7 @@
                 <option value="desert-mirage">Desert Mirage</option>
                 <option value="desert-rose">Desert Rose</option>
                 <option value="desert-water">Desert Water</option>
+                <option value="destiny-to-succeed">Destiny to Succeed</option>
                 <option value="developers-zone">Developers Zone</option>
                 <option value="diamond-planet">Diamond Planet</option>
                 <option value="different-perspective">Different Perspective</option>
