--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@
     <link rel="stylesheet" href="css/calendar.sea-breeze.css">
     <link rel="stylesheet" href="css/calendar.seabreeze-avenue.css">
     <link rel="stylesheet" href="css/calendar.sea-diamonds.css">
+    <link rel="stylesheet" href="css/calendar.seahorse.css">
     <link rel="stylesheet" href="css/calendar.sea-lions.css">
     <link rel="stylesheet" href="css/calendar.sea-star.css">
     <link rel="stylesheet" href="css/calendar.secret-item.css">
@@ -1233,6 +1234,7 @@
                 <option value="sea-breeze">Sea Breeze</option>
                 <option value="seabreeze-avenue">Seabreeze Avenue</option>
                 <option value="sea-diamonds">Sea Diamonds</option>
+                <option value="seahorse">Seahorse</option>
                 <option value="sea-lions">Sea Lions</option>
                 <option value="sea-star">Sea Star</option>
                 <option value="secret-item">Secret Item</option>
